plugins {
	id 'org.springframework.boot' version '2.7.0'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id "org.sonarqube" version "3.4.0.2513"
}

java {
	toolchain {
		languageVersion.set(JavaLanguageVersion.of(15))
	}
}

repositories {
		mavenCentral()
	}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'	
    implementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'junit:junit:4.13.2'

    // Cucumber dependencies
    testImplementation 'io.cucumber:cucumber-java:7.11.1'
    testImplementation 'io.cucumber:cucumber-spring:7.11.1'
    testImplementation 'io.cucumber:cucumber-junit:7.11.1'	
}

tasks.withType(JavaCompile) {
    options.compilerArgs.add("--enable-preview")
}

test{
	ignoreFailures = true
}

tasks.named('test') {
	useJUnitPlatform()
}
